# RayTracingInOneWeekend

./: .gitignore  CMakeLists.txt
include/: color.hpp  imgCam.hpp  ray.hpp  vec3.hpp  view.hpp
src/: color.cpp  main.cpp  vec3.cpp
